add properties view & index route, start DataTables.js script. Broken Stripe..

--- a/app/views/planning_app/index.html.haml
+++ b/app/views/planning_app/index.html.haml
@@ -3,7 +3,7 @@
 :javascript
   if (typeof gon !== 'undefined') { var refsFromMap = htmlEscape(gon.refs); }
   $.getJSON("index.json", {refs: refsFromMap}, function(data) {
-    drawTable(data, function() {
+    drawAppsTable(data, function() {
       var table = $('#tbl').DataTable();
       table.column(0).visible(false);
     });
