Sequel 5, Bing maps API V8, add get_google_map.js

--- a/app/views/planning_app/map.html.haml
+++ b/app/views/planning_app/map.html.haml
@@ -1,8 +1,6 @@
-.map_container
-  #mapDiv.map_canvas
-  #toolbarContainer{"style" => "float:right"}
+=partial "layouts/map"
 
 :javascript
   $(function() {
-    GetMap(gon.data);
+    GetBingMap(gon.data);
   });
