--- a/app/views/property/map.html.haml
+++ b/app/views/property/map.html.haml
@@ -1,10 +1,8 @@
-.map_container
-  #mapDiv.map_canvas
-  #toolbarContainer{"style" => "float:right"}
+=partial "layouts/map"
 
 :javascript
   $(function() {
-    var map = GetMap(gon.data);
+    var map = GetBingMap(gon.data);
     plotParishBoundaries();
   });
 
