complete Google maps functionality, except viewInfoBox

--- a/app/views/layouts/_map.html.haml
+++ b/app/views/layouts/_map.html.haml
@@ -5,4 +5,4 @@
   #mapDiv.map_canvas
   #toolbarContainer{"style" => "float:right"}
 =javascript_include_tag 'get_google_map'
-=javascript_include_tag 'https://maps.googleapis.com/maps/api/js?libraries=drawing&callback=getGoogleMap'
+=javascript_include_tag 'https://maps.googleapis.com/maps/api/js?libraries=drawing,geometry&callback=getGoogleMap'
