--- a/app/assets/stylesheets/site.css
+++ b/app/assets/stylesheets/site.css
@@ -62,17 +62,20 @@ h1 {
 .map_container{
   position: relative;
   width: 100%;
-  padding-bottom: 52%; /* Ratio 16:10 ( 100%/16*10 = 62.5% ) */
+  /*height: -o-calc(100vh - 72px); /* opera */
+  /*height: calc(100% - 72px); /* firefox BROKEN */
+  /*height: -webkit-calc(100vh - 72px); /* google, safari */
+  padding-bottom: 46%; /* 52% for 16:9 screen */
 }
 
 .map_container .map_canvas{
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    margin: 0;
-    padding: 0;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  margin: 0;
+  padding: 0;
 }
 
 .table {
@@ -159,4 +162,18 @@ td div.long-text {
   z-index:1;
   left:20px;
   top:-1px;
+}
+
+#location-finder { /* for Geocoder */
+  position: absolute;
+  top: 10px;
+  left: 25%;
+  z-index: 5;
+  background-color: #fff;
+  padding: 5px;
+  border: 1px solid #999;
+  text-align: center;
+  font-family: 'Roboto','sans-serif';
+  line-height: 30px;
+  padding-left: 10px;
 }
