--- a/app/views/layouts/_map.html.haml
+++ b/app/views/layouts/_map.html.haml
@@ -4,8 +4,9 @@
 .map_container
   #mapDiv.map_canvas
   #toolbarContainer{"style" => "float:right"}
-    #location-finder
-      %input#location{:type => "textbox"}
-      %input#find-location{:type => "button", :value => "Find location"}
 =javascript_include_tag 'get_google_map'
 =javascript_include_tag 'https://maps.googleapis.com/maps/api/js?key=AIzaSyCcqaso5O8mOrViohlCe8Bp29FBMz8W24k&libraries=drawing&callback=getGoogleMap'
+-#=javascript_include_tag 'location_finder'
+
+-#:javascript
+  -#$('#search-string').on('click', findLocations);
